--- a/movies_info/.env
+++ b/movies_info/.env
@@ -2,3 +2,4 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_HOST_USER=jaydeep7894@gmail.com
 EMAIL_HOST_PASSWORD=lwtbkwcugbavmhga
 RECIPIENT_ADDRESS=jaydeeptl@outlook.com
+TMDB_API_KEY=0a1eb75d23905284398cf65a74bcb87c
